# multi-agent-system

./: .gitignore  Dockerfile  README.md  app.py  app_compatible.py  app_debug.py  check_memory_agent_structure.py  complete_project_setup.py  debug_coordinator.py  debug_streamlit.py  docker-compose.yml  fix_all_imports.py  fix_chromadb_collections.py  generate_outputs.py  pyproject.toml  run_scenarios.py  run_tests.py  setup.sh  simple_demo.py  test_memory_simple.py
manual_tests/: adaptive_reuse_test.py  coordinator_test.py
manual_tests/memory_storage/: conversation_metadata.json
manual_tests/memory_storage/chroma_db/: chroma.sqlite3
memory_storage/chroma_db/: chroma.sqlite3
outputs/: collaborative.txt  complex_query.txt  memory_test.txt  multi_step.txt  simple_query.txt
src/agents/: analysis_agent.py.backup  base_agent.py  research_agent.py  research_agent.py.backup
src/coordinator/: coordinator_agent.py
src/memory/: memory_agent.py
src/models/: message.py
test_memory_storage/chroma_db/: chroma.sqlite3
tests/: conftest.py  test_agents.py  test_memory_agent.py  test_models.py
