[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "groq>=0.4.1",
    "streamlit>=1.28.0",
    "chromadb>=0.4.15",
    "pydantic>=2.5.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0"
]

